--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jollibee Menu</title>
   <link rel="stylesheet" href="Food_Menu.css">
 </head>
@@ -11,96 +9,82 @@
   <h1>Welcome to Jollibee!</h1>
 
   <!-- Chickenjoy -->
+  <table>
   <div class="menu-item">
     <h2>Chickenjoy</h2>
-    <img class="item-image" src="chickenjoy.jpg" alt="Chickenjoy">
+    <img class="item-image" src="Chicken.jpg" alt="Chickenjoy" width="200">
     <p>Juicy and crispy fried chicken served with Jollibee's special gravy.</p>
-    <p>Price: $5.99</p>
+    <p>Price:   ₱159</p>
     <form>
-      <button type="button" onclick="addToCart('Chickenjoy')">Add to Cart</button>
+      <button type="button" oneclick="addToCart('Chickenjoy')">Add to Cart</button>
     </form>
   </div>
 
   <!-- Jolly Hotdog -->
   <div class="menu-item">
     <h2>Jolly Hotdog</h2>
-    <img class="item-image" src="jolly_hotdog.jpg" alt="Jolly Hotdog">
+    <img class="item-image" src="Hotdog.jpg" alt="Jolly Hotdog">
     <p>Juicy hotdog sandwich with Jollibee's signature dressing.</p>
-    <p>Price: $3.99</p>
+    <p>Price:   ₱84</p>
     <form>
-      <button type="button" onclick="addToCart('Jolly Hotdog')">Add to Cart</button>
+      <button type="button" oneclick="addToCart('Jolly Hotdog')">Add to Cart</button>
     </form>
   </div>
 
   <!-- Yumburger -->
   <div class="menu-item">
     <h2>Yumburger</h2>
-    <img class="item-image" src="yumburger.jpg" alt="Yumburger">
+    <img class="item-image" src="burger.jpg" alt="Yumburger">
     <p>Classic Jollibee burger with special dressing.</p>
-    <p>Price: $4.49</p>
+    <p>Price:   ₱40</p>
     <form>
-      <button type="button" onclick="addToCart('Yumburger')">Add to Cart</button>
+      <button type="button" oneclick="addToCart('Yumburger')">Add to Cart</button>
     </form>
   </div>
 
   <!-- Jolly Spaghetti -->
   <div class="menu-item">
     <h2>Jolly Spaghetti</h2>
-    <img class="jolly_spaghetti.jpg" src="jolly_spaghetti.jpg" alt="Jolly Spaghetti">
+    <img class="item-image" src="Spaghetti.jpg" alt="Jolly Spaghetti">
     <p>Sweet-style spaghetti with hotdog slices and ground meat.</p>
-    <p>Price: $5.29</p>
+    <p>Price:   ₱133</p>
     <form>
-      <button type="button" onclick="addToCart('Jolly Spaghetti')">Add to Cart</button>
+      <button type="button" oneclick="addToCart('Jolly Spaghetti')">Add to Cart</button>
     </form>
   </div>
 
   <!-- Burger Steak -->
   <div class="menu-item">
     <h2>Burger Steak</h2>
-    <img class="item-image" src="burger_steak.jpg" alt="Burger Steak">
+    <img class="item-image" src="Steak.jpg" alt="Burger Steak">
     <p>Savory beef patty served with flavorful mushroom gravy and rice.</p>
-    <p>Price: $6.99</p>
+    <p>Price: ₱59</p>
     <form>
-      <button type="button" onclick="addToCart('Burger Steak')">Add to Cart</button>
-    </form>
-  </div>
-
-  <!-- Jolly Hot Wings -->
-  <div class="menu-item">
-    <h2>Jolly Hot Wings</h2>
-    <img class="item-image" src="jolly_hot_wings.jpg" alt="Jolly Hot Wings">
-    <p>Spicy and crispy chicken wings served with dip.</p>
-    <p>Price: $6.99</p>
-    <form>
-      <button type="button" onclick="addToCart('Jolly Hot Wings')">Add to Cart</button>
+      <button type="button" oneclick="addToCart('Burger Steak')">Add to Cart</button>
     </form>
   </div>
 
   <!-- Palabok Fiesta -->
   <div class="menu-item">
     <h2>Palabok Fiesta</h2>
-    <img class="item-image" src="palabok_fiesta.jpg" alt="Palabok Fiesta">
+    <img class="item-image" src="palabok.jpg" alt="Palabok Fiesta">
     <p>Rice noodles in a rich garlic sauce topped with chicharron, tinapa, and boiled egg.</p>
-    <p>Price: $7.49</p>
+    <p>Price:   ₱89</p>
     <form>
-      <button type="button" onclick="addToCart('Palabok Fiesta')">Add to Cart</button>
+      <button type="button" oneclick="addToCart('Palabok Fiesta')">Add to Cart</button>
     </form>
   </div>
 
   <!-- Halo-halo -->
   <div class="menu-item">
     <h2>Halo-halo</h2>
-    <img class="item-image" src="halo_halo.jpg" alt="Halo-halo">
+    <img class="item-image" src="Halo.jpg" alt="Halo-halo">
     <p>Traditional Filipino dessert with a mix of shaved ice, fruits, and sweet ingredients.</p>
-    <p>Price: $4.99</p>
+    <p>Price:   ₱89</p>
     <form>
-      <button type="button" onclick="addToCart('Halo-halo')">Add to Cart</button>
+      <button type="button" oneclick="addToCart('Halo-halo')">Add to Cart</button>
     </form>
   </div>
-
-  <!-- Website Link -->
-  <p>Visit our <a href="https://www.jollibee.com.ph/" target="_blank">website</a> for more information.</p>
-
-  <script src="script.js"></script>
+</table>
 </body>
 </html>
